--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -21,61 +21,37 @@
         <p class="md-sys-typescale-display-medium">{{ page.title }}</p>
         <p class="md-sys-typescale-headline-medium">{{ page.subtitle }}</p>
 
-        <div class="hhri-theme-sections">
-          {% for item in site.theme_gbv %}
-            {% if item.path contains 'definitions/' %}
-              <details class="micl-card-filled hhri-theme-section">
-                <summary>
-                  <span class="micl-card__headline-s">
-                    <span class="micl-heading">{{ item.title }}</span>
-                  </span>
-                  {% if item.year or item.organization %}
-                    <span class="micl-card__subhead">
-                      {{ item.year }}
-                      {% if item.year and item.organization %} | {% endif %}
-                      {{ item.organization }}
+        {% assign sections = 'definitions/,guidelines/' | split: ',' %}
+        {% for section in sections %}
+          <div class="hhri-theme-sections">
+            {% for item in site.theme_gbv %}
+              {% if item.path contains section %}
+                <details class="micl-card-filled hhri-theme-section">
+                  <summary>
+                    <span class="micl-card__headline-s">
+                      <span class="micl-heading">{{ item.title }}</span>
                     </span>
-                  {% endif %}
-                </summary>
-                <div class="micl-card__content md-sys-typescale-body-medium">
-                  {{ item.content }}
-                  {% if item.link %}
-                    <hr class="micl-divider">
-                    <a href="{{ item.link }}" class="micl-button-text-s">Open</a>
-                  {% endif %}
-                </div>
-              </details>
-            {% endif %}
-          {% endfor %}
-        </div>
+                    {% if item.year or item.organization %}
+                      <span class="micl-card__subhead">
+                        {{ item.year }}
+                        {% if item.year and item.organization %} | {% endif %}
+                        {{ item.organization }}
+                      </span>
+                    {% endif %}
+                  </summary>
+                  <div class="micl-card__content md-sys-typescale-body-medium">
+                    {{ item.content }}
+                    {% if item.link %}
+                      <hr class="micl-divider">
+                      <a href="{{ item.link }}" class="micl-button-text-s">View Source</a>
+                    {% endif %}
+                  </div>
+                </details>
+              {% endif %}
+            {% endfor %}
+          </div>
+        {% endfor }
 
-        <div class="hhri-theme-sections">
-          {% for item in site.theme_gbv %}
-            {% if item.path contains 'guidelines/' %}
-              <details class="micl-card-filled hhri-theme-section">
-                <summary>
-                  <span class="micl-card__headline-s">
-                    <span class="micl-heading">{{ item.title }}</span>
-                  </span>
-                  {% if item.year or item.organization %}
-                    <span class="micl-card__subhead">
-                      {{ item.year }}
-                      {% if item.year and item.organization %} | {% endif %}
-                      {{ item.organization }}
-                    </span>
-                  {% endif %}
-                </summary>
-                <div class="micl-card__content md-sys-typescale-body-medium">
-                  {{ item.content }}
-                  {% if item.link %}
-                    <hr class="micl-divider">
-                    <a href="{{ item.link }}" class="micl-button-text-s">Open</a>
-                  {% endif %}
-                </div>
-              </details>
-            {% endif %}
-          {% endfor %}
-        </div>
       </section>
     </main>
   </body>
