--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -50,7 +50,7 @@
               {% endif %}
             {% endfor %}
           </div>
-        {% endfor }
+        {% endfor %}
 
       </section>
     </main>
