--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -10,7 +10,7 @@
 .hhri-theme-section {
   --md-sys-divider-space: 8px;
   padding-block-start: 16px;
-  inline-size: calc(1600px - (3 * 8px));
+  inline-size: calc((1600px - (3 * 8px)) / 4);
 }
 .hhri-theme-section a.micl-button-text-s {
   margin-block-end: 6px;
