--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -11,6 +11,7 @@
   --md-sys-divider-space: 8px;
   padding-block-start: 16px;
   inline-size: calc((1600px - (3 * 8px)) / 4);
+  background-color: var(--md-sys-color-secondary-container);
 }
 .hhri-theme-section a.micl-button-text-s {
   margin-block-end: 6px;
