--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -18,8 +18,8 @@
   <body class="micl-window dark">
     <main class="micl-body">
       <section class="micl-pane">
-        <p class="md-sys-typescale-display-medium">{{ page.title }}</p>
-        <p class="md-sys-typescale-headline-medium">{{ page.subtitle }}</p>
+        <h1 class="md-sys-typescale-display-large">{{ page.title }}</h1>
+        <span class="md-sys-typescale-headline-small">{{ page.subtitle }}</span>
 
         {% assign path_nodes = '/definitions/,/guidelines/,/framework/' | split: ',' %}
         {% for path_node in path_nodes %}
@@ -27,8 +27,8 @@
           {% assign section_title = section | append: '_title' %}
           {% assign section_text = section | append: '_text' %}
           <div class="hhri-theme-sections">
-            <h2>{{ page[section_title] }}</h2>
-            <p>{{ page[section_text] }}</p>
+            <h2 class="md-sys-typescale-headline-large">{{ page[section_title] }}</h2>
+            <span class="md-sys-typescale-body-large">{{ page[section_text] }}</span>
             
             {% for item in site.theme_gbv %}
               {% if item.path contains path_node %}
