--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -25,7 +25,7 @@ header {
 .hhri-theme-section {
   --md-sys-divider-space: 8px;
   padding-block-start: 16px;
-  inline-size: calc((1600px - (3 * 8px)) / 4);
+  inline-size: calc((1600px - (2 * 24px) - (3 * 8px)) / 4);
   background-color: var(--md-sys-color-secondary-container);
 }
 .hhri-theme-section .micl-button-text-s {
