--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -4,12 +4,15 @@
 .micl-card__headline-s .micl-heading {
   white-space: normal;
 }
+.micl-card__content {
+  padding-block: 0;
+}
 
 h1 {
   margin-block: 48px 16px;
 }
 h2 {
-  margin-block: 0;
+  margin-block: 0 8px;
 }
 header {
   padding-bottom: 16px;
