--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -35,7 +35,7 @@
             {% for item in site.theme_gbv %}
               {% if item.path contains path_node %}
                 {% if item.title %}
-                  <details class="micl-card-filled hhri-theme-section">
+                  <details class="micl-card-filled hhri-theme-section" tabindex="0">
                     <summary>
                       <span class="micl-card__headline-s">
                         <span class="micl-heading">{{ item.title }}</span>
