--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -52,7 +52,7 @@
                       {{ item.content }}
                       {% if item.link %}
                         <hr class="micl-divider">
-                        <a href="{{ item.link }}" class="micl-button-text-s">View Source</a>
+                        <a href="{{ item.link }}" class="micl-button-text-s" target="_blank">View Source</a>
                       {% endif %}
                     </div>
                   </details>
