--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -18,8 +18,13 @@
   <body class="micl-window dark">
     <main class="micl-body">
       <section class="micl-pane">
-        <h1 class="md-sys-typescale-display-large">{{ page.title }}</h1>
-        <span class="md-sys-typescale-headline-small">{{ page.subtitle }}</span>
+        <header>
+          <div class="hhri-icon">{{ page.icon }}</div
+          <div>
+            <h1 class="md-sys-typescale-display-large">{{ page.title }}</h1>
+            <span class="md-sys-typescale-headline-small">{{ page.subtitle }}</span>
+          </div>
+        </header>
 
         {% assign path_nodes = '/definitions/,/guidelines/,/framework/' | split: ',' %}
         {% for path_node in path_nodes %}
