--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -19,7 +19,7 @@
     <main class="micl-body">
       <section class="micl-pane">
         <header>
-          <div class="hhri-icon">{{ page.icon }}</div
+          <div class="hhri-icon">{{ page.icon }}</div>
           <div>
             <h1 class="md-sys-typescale-display-large">{{ page.title }}</h1>
             <span class="md-sys-typescale-headline-small">{{ page.subtitle }}</span>
