--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -11,7 +11,7 @@
 }
 
 h1 {
-  margin-block: 48px 16px;
+  margin-block: 0 16px;
 }
 h2 {
   margin-block: 0 8px;
@@ -20,6 +20,7 @@ h2 {
   display: flex;
   align-items: center;
   min-block-size: 240px;
+  column-gap: 16px;
 
   @media (max-width: 600px) {
     flex-direction: column;
