--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -10,10 +10,10 @@
     <link rel="alternate" hreflang="es" href="https://henkpb.github.io/hhri/es">
     <link rel="alternate" hreflang="x-default" href="https://henkpb.github.io/hhri">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&amp;display=swap">
-    <link rel="stylesheet" href="/assets/css/theme.css">
-    <link rel="stylesheet" href="/assets/css/micl.css">
-    <link rel="stylesheet" href="/assets/css/hhri.css">
-    <link rel="stylesheet" href="/assets/css/page.css">
+    <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/micl.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/hhri.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/page.css' | relative_url }}">
   </head>
   <body class="micl-window dark">
     <main class="micl-body">
