--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -26,7 +26,7 @@
           </div>
         </header>
 
-        {% assign path_nodes = 'page.paths' | split: ',' %}
+        {% assign path_nodes = page.paths | split: ',' %}
         {% for path_node in path_nodes %}
           {% assign section = path_node | remove: '/' %}
           {% assign section_title = section | append: '_title' %}
