--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -43,7 +43,7 @@
                   <details class="micl-card-filled hhri-theme-section" tabindex="0">
                     <summary>
                       <span class="micl-card__headline-s">
-                        <span class="micl-heading">{{ item.title }}</span>
+                        <span class="micl-heading md-sys-typescale-emphasized-headline-small">{{ item.title }}</span>
                       </span>
                       {% if item.year or item.organization %}
                         <span class="micl-card__supporting-text">
