--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -69,7 +69,7 @@
 
       </section>
     </main>
-    <footer>
+    <footer class="md-sys-typescale-body-medium">
       <div>
         <span>{{ site.data.footer.about_text }}</span>
       </div>
