--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -192,7 +192,7 @@
         {% endif %}
       </section>
     </main>
-    <footer>
+    <footer class="md-sys-typescale-body-medium">
       <div>
         <span>{{ site.data.footer.about_text }}</span>
       </div>
