--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -74,9 +74,11 @@
         <span>{{ site.data.footer.about_text }}</span>
       </div>
       <div>
-        <span>{{ site.data.footer.social_text }}</span>
+        <p>{{ site.data.footer.social_text }}</p>
         {% for social in site.data.footer.social_links %}
-          <a href="{{ social.link }}" target="_blank" rel="noopener">{{ social.name }}</a>
+          <a href="{{ social.link }}" target="_blank" rel="noopener" aria-label="{{ social.name }}">
+            <span class="hhri-icon">{{ social.icon }}</span>
+          </a>
         {% endfor %}
       </div>
     </footer>
