--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -198,10 +198,11 @@
       </div>
       <div>
         <p>{{ site.data.footer.social_text }}</p>
+        <ul>
         {% for social in site.data.footer.social_links %}
-          <a href="{{ social.link }}" target="_blank" rel="noopener" aria-label="{{ social.name }}">
-            <span class="hhri-icon">{{ social.icon }}</span>
-          </a>
+          <li>
+            <a href="{{ social.link }}" target="_blank" rel="noopener">{{ social.name }}"</a>
+          </li>
         {% endfor %}
       </div>
     </footer>
