--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -192,6 +192,7 @@
         {% endif %}
       </section>
     </main>
+
     <footer class="md-sys-typescale-body-medium">
       <div>
         <span>{{ site.data.footer.about_text }}</span>
@@ -200,7 +201,7 @@
         <p>{{ site.data.footer.social_text }}</p>
         <div class="hhri-socials">
           {% for social in site.data.footer.social_links %}
-            <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-s" aria-label="{{ social.name }}>{{ social.icon }}</a>
+            <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-s" aria-label="{{ social.name }}">{{ social.icon }}</a>
           {% endfor %}
         </div>
       </div>
