--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -16,6 +16,22 @@
     <link rel="stylesheet" href="{{ '/assets/css/page.css' | relative_url }}">
   </head>
   <body class="micl-window dark">
+
+    {% assign path_nodes = page.paths | split: ',' %}
+
+    <nav id="hhrinavigation" class="micl-navigationrail">
+      <div clas="micl-navigationrail__content">
+        {% for path_node in path_nodes %}
+          {% assign section = path_node | remove: '/' %}
+          {% assign section_title = section | append: '_title' %}
+          <label class="micl-navigationrail__item" tabindex="0">
+            <input type="radio" name="navitem" value="">
+            <span class="micl-navigationrail__text">{{ page[section_title] }}</span>
+          </label>
+        {% endfor %}
+      </div>
+    </nav>
+
     <main class="micl-body">
       <section class="micl-pane">
         <header>
@@ -26,7 +42,6 @@
           </div>
         </header>
 
-        {% assign path_nodes = page.paths | split: ',' %}
         {% for path_node in path_nodes %}
           {% assign section = path_node | remove: '/' %}
           {% assign section_title = section | append: '_title' %}
@@ -69,17 +84,18 @@
 
       </section>
     </main>
+
     <footer class="md-sys-typescale-body-medium">
       <div>
         <span>{{ site.data.footer.about_text }}</span>
       </div>
       <div>
         <p>{{ site.data.footer.social_text }}</p>
-        {% for social in site.data.footer.social_links %}
-          <a href="{{ social.link }}" target="_blank" rel="noopener" aria-label="{{ social.name }}">
-            <span class="hhri-icon">{{ social.icon }}</span>
-          </a>
-        {% endfor %}
+        <div class="hhri-socials">
+          {% for social in site.data.footer.social_links %}
+            <a href="{{ social.link }}" target="_blank" class="micl-iconbutton-standard-m" aria-label="{{ social.name }}">{{ social.icon }}</a>
+          {% endfor %}
+        </div>
       </div>
     </footer>
   </body>
