--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -22,7 +22,7 @@
 
     <dialog id="hhrinavigation" class="micl-navigationrail" closedby="closerequest">
       <div class="micl-navigationrail__headline">
-        <button type="button class="micl-iconbutton-standard-s micl-button--toggle material-symbols-outlined" popovertarget="hhrinavigation" data-miclalt="menu_open">menu</button>
+        <button type="button" class="micl-iconbutton-standard-s micl-button--toggle material-symbols-outlined" popovertarget="hhrinavigation" data-miclalt="menu_open">menu</button>
       </div>
       <div class="micl-navigationrail__content">
         {% for path_node in path_nodes %}
