--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -84,7 +84,7 @@
 
       </section>
       <section class="micl-pane micl-pane--hidden-to-expanded">
-        <div class="hhri-onpage class="md-sys-typescale-body-large">
+        <div class="hhri-onpage" class="md-sys-typescale-body-large">
           <p class="md-sys-typescale-title-large">On this page</p>
 
           {% for path_node in path_nodes %}
