--- a/assets/css/hhri.css
+++ b/assets/css/hhri.css
@@ -16,6 +16,26 @@
   max-inline-size: 1600px;
   margin-inline: auto;
 }
+.micl-pane:last-of-type {
+  min-inline-size: calc((1600px - var(--md-sys-layout-pane-spacer) - (2 * var(--md-sys-layout-window-margin)) - (4 * 8px)) / 5);
+}
+
+.hhri-onpage {
+  position: fixed;
+  display: flex;
+  box-sizing: border-box;
+  flex-flow: column;
+  inline-size: calc((1600px - var(--md-sys-layout-pane-spacer) - (2 * var(--md-sys-layout-window-margin)) - (4 * 8px)) / 5);
+  row-gap: 24px;
+  margin-top: 48px;
+  padding: 24px 16px;
+  border-radius: 12px;
+  background-color: var(--md-sys-color-tertiary-container);
+  color: var(--md-sys-color-on-tertiary-container);
+}
+.hhri-onpage a {
+  text-decoration: none;
+}
 
 footer {
   display: flex;
