--- a/assets/css/hhri.css
+++ b/assets/css/hhri.css
@@ -13,11 +13,12 @@
 }
 
 .micl-window {
+  --hhri-card-width: calc((1600px - var(--md-sys-layout-pane-spacer) - (2 * var(--md-sys-layout-window-margin)) - (4 * var(--md-sys-card-margin, 0px))) / 5)
   max-inline-size: 1600px;
   margin-inline: auto;
 }
 .micl-pane:last-of-type {
-  min-inline-size: calc((1600px - var(--md-sys-layout-pane-spacer) - (2 * var(--md-sys-layout-window-margin)) - (4 * 8px)) / 5);
+  min-inline-size: var(--hhri-card-width);
 }
 
 .hhri-onpage {
@@ -25,7 +26,7 @@
   display: flex;
   box-sizing: border-box;
   flex-flow: column;
-  inline-size: calc((1600px - var(--md-sys-layout-pane-spacer) - (2 * var(--md-sys-layout-window-margin)) - (4 * 8px)) / 5);
+  inline-size: var(--hhri-card-width);
   row-gap: 24px;
   margin-top: 48px;
   padding: 24px 16px;
