--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -90,7 +90,7 @@
           {% for path_node in path_nodes %}
             {% assign section = path_node | remove: '/' %}
             {% assign section_title = section | append: '_title' %}
-            <a href="#section{{ forloop.index }}">{{ page[section_title] }}</a>
+            <a href="#section{{ forloop.index }}" class="md-sys-typescale-body-large">{{ page[section_title] }}</a>
           {% endfor %}
         </div>
       </section>
