--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -56,7 +56,7 @@ h2 {
   --statelayer-color: var(--md-sys-color-on-secondary-container);
   --md-sys-divider-space: 8px;
   --md-sys-divider-color: var(--md-sys-color-secondary-fixed-dim);
-  inline-size: calc((1600px - (2 * var(--md-sys-layout-window-margin)) - (3 * 8px)) / 4);
+  inline-size: var(--hhri-card-width);
   background-color: var(--md-sys-color-secondary-container);
 }
 .hhri-theme-section summary {
