--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,125 +71,42 @@
           {% endfor %}
         </div>
 
-        {% if page.manual_title %}
-          <div class="micl-card-outlined">
-            <div class="micl-card__headline-l">
-              <h2>{{ page.manual_title }}</h2>
-            </div>
-            {% if page.manual_text %}
-              <p class="micl-card__supporting-text">{{ page.manual_text }}</p>
-            {% endif %}
-            <div class="micl-card__content">
-              {% if page.manual_list %}
-                <ul class="micl-list">
-                  {% for item in page.manual_list %}
-                    <li class="micl-list-item-one" tabindex="0">
-                      <a href="{{ item.link }}" tabindex="-1">
-                        <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
-                        <span class="micl-list-item__text">
-                          <span class="micl-list-item__headline">{{ item.title }}</span>
-                          {% if item.text %}
-                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
-                          {% endif %}
-                        </span>
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
+        {% assign topics = 'manual|theme|resource|etraining' | split: '|' %}
+        {% for topic in topics %}
+          {% assign topic_title = topic | append: '_title' %}
+          {% assign topic_text = topic | append: '_text' %}
+          {% assign topic_list = topic | append: '_list' %}
+          {% if site.data[topic_title] %}
+            <div class="micl-card-outlined">
+              <div class="micl-card__headline-l">
+                <h2>{{ site.data[topic_title] }}</h2>
+              </div>
+              {% if site.data[topic_text] %}
+                <p class="micl-card__supporting-text">{{ site.data[topic_text] }}</p>
               {% endif %}
+              <div class="micl-card__content">
+                {% if site.data[topic_list] %}
+                  <ul class="micl-list">
+                    {% for item in site.data[topic_list] %}
+                      <li class="micl-list-item-one" tabindex="0">
+                        <a href="{{ item.link }}" tabindex="-1">
+                          <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
+                          <span class="micl-list-item__text">
+                            <span class="micl-list-item__headline">{{ item.title }}</span>
+                            {% if item.text %}
+                              <span class="micl-list-item__supporting-text">{{ item.text }}</span>
+                            {% endif %}
+                          </span>
+                        </a>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                {% endif %}
+              </div>
             </div>
-          </div>
-        {% endif %}
+          {% endif %}
+        {% endfor %}
 
-        {% if page.theme_title %}
-          <div class="micl-card-outlined">
-            <div class="micl-card__headline-l">
-              <h2>{{ page.theme_title }}</h2>
-            </div>
-            {% if page.theme_text %}
-              <p class="micl-card__supporting-text">{{ page.theme_text }}</p>
-            {% endif %}
-            <div class="micl-card__content">
-              {% if page.theme_list %}
-                <ul class="micl-list">
-                  {% for item in page.theme_list %}
-                    <li class="micl-list-item-one" tabindex="0">
-                      <a href="{{ item.link }}" tabindex="-1">
-                        <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
-                        <span class="micl-list-item__text">
-                          <span class="micl-list-item__headline">{{ item.title }}</span>
-                          {% if item.text %}
-                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
-                          {% endif %}
-                        </span>
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-            </div>
-          </div>
-        {% endif %}
-
-        {% if page.resource_title %}
-          <div class="micl-card-outlined">
-            <div class="micl-card__headline-l">
-              <h2>{{ page.resource_title }}</h2>
-            </div>
-            {% if page.resource_text %}
-              <p class="micl-card__supporting-text">{{ page.resource_text }}</p>
-            {% endif %}
-            <div class="micl-card__content">
-              {% if page.resource_list %}
-                <ul class="micl-list">
-                  {% for item in page.resource_list %}
-                    <li class="micl-list-item-one" tabindex="0">
-                      <a href="{{ item.link }}" tabindex="-1">
-                        <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
-                        <span class="micl-list-item__text">
-                          <span class="micl-list-item__headline">{{ item.title }}</span>
-                          {% if item.text %}
-                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
-                          {% endif %}
-                        </span>
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-            </div>
-          </div>
-        {% endif %}
-
-        {% if page.etraining_title %}
-          <div class="micl-card-outlined">
-            <div class="micl-card__headline-l">
-              <h2>{{ page.etraining_title }}</h2>
-            </div>
-            {% if page.etraining_text %}
-              <p class="micl-card__supporting-text">{{ page.etraining_text }}</p>
-            {% endif %}
-            <div class="micl-card__content">
-              {% if page.etraining_list %}
-                <ul class="micl-list">
-                  {% for item in page.etraining_list %}
-                    <li class="micl-list-item-one" tabindex="0">
-                      <a href="{{ item.link }}" tabindex="-1">
-                        <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
-                        <span class="micl-list-item__text">
-                          <span class="micl-list-item__headline">{{ item.title }}</span>
-                          {% if item.text %}
-                            <span class="micl-list-item__supporting-text">{{ item.text }}</span>
-                          {% endif %}
-                        </span>
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-            </div>
-          </div>
-        {% endif %}
       </section>
     </main>
 
