--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,18 +76,18 @@
           {% assign topic_title = topic | append: '_title' %}
           {% assign topic_text = topic | append: '_text' %}
           {% assign topic_list = topic | append: '_list' %}
-          {% if site.data[topic_title] %}
+          {% if site.data.menu[topic_title] %}
             <div class="micl-card-outlined">
               <div class="micl-card__headline-l">
-                <h2>{{ site.data[topic_title] }}</h2>
+                <h2>{{ site.data.menu[topic_title] }}</h2>
               </div>
-              {% if site.data[topic_text] %}
-                <p class="micl-card__supporting-text">{{ site.data[topic_text] }}</p>
+              {% if site.data.menu[topic_text] %}
+                <p class="micl-card__supporting-text">{{ site.data.menu[topic_text] }}</p>
               {% endif %}
               <div class="micl-card__content">
-                {% if site.data[topic_list] %}
+                {% if site.data.menu[topic_list] %}
                   <ul class="micl-list">
-                    {% for item in site.data[topic_list] %}
+                    {% for item in site.data.menu[topic_list] %}
                       <li class="micl-list-item-one" tabindex="0">
                         <a href="{{ item.link }}" tabindex="-1">
                           <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
