--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -88,7 +88,7 @@
                 {% if site.data.menu[topic_list] %}
                   <ul class="micl-list">
                     {% for item in site.data.menu[topic_list] %}
-                      <li class="micl-list-item-one" tabindex="0">
+                      <li class="micl-list-item-two" tabindex="0">
                         <a href="{{ item.link }}" tabindex="-1">
                           <span class="micl-list-item__image hhri-icon">{{ item.icon }}</span>
                           <span class="micl-list-item__text">
