--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -46,7 +46,7 @@
     <main class="micl-body">
       <section class="micl-pane">
         <header class="micl-appbar">
-          <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrinavigation">menu</button>
+          <button type="button" class="micl-appbar__leading-icon micl-iconbutton-standard-s material-symbols-outlined" command="show-modal" commandfor="hhrimenu">menu</button>
         </header>
         <hgroup>
           <div class="hhri-icon">{{ page.icon }}</div>
